--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 
 dependencies:
   browser: '>=0.10.0 <0.11.0'
+  path: any
+dev_dependencies:
   dart_to_js_script_rewriter: '^1.0.1'
 
 transformers:
